<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/pixel_google"/>
            <TextView
                style="@style/TextContent.Small.White"
                android:layout_gravity="bottom"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:background="#4D000000"
                android:drawableStart="@drawable/ic_collections_white_18dp"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/photo_slides"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@android:color/white"/>
        </FrameLayout>
        
        <TextView
            style="@style/TextContent.Black"
            android:textSize="32sp"
            android:text="@string/pricing"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            style="@style/TextContent.SubTitle"
            android:text="@string/available_stock"
            android:layout_marginBottom="16dp"/>

        <TextView
            style="@style/TextContent"
            android:text="@string/content_text"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            android:textColor="@android:color/black"/>

        <TextView
            style="@style/TextContent.SubTitle"
            android:text="@string/spec_title"
            android:layout_marginBottom="8dp"/>
        
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/display_title"/>

                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/content_specs_display" />

            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/battery_title"/>

                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/content_specs_battery" />

            </TableRow>
        </TableLayout>

        <TextView
            style="@style/TextContent.SubTitle"
            android:text="@string/selled_title"
            android:layout_marginBottom="8dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/masked_me"
                android:layout_centerVertical="true"
                android:id="@+id/profile_image"
                android:layout_marginEnd="16dp"/>

            <TextView
                style="@style/TextContent"
                android:layout_toEndOf="@id/profile_image"
                android:text="@string/seller_id"
                android:textColor="@android:color/black"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/buy"/>

    </LinearLayout>
</ScrollView>